fix editing options not showing

--- a/bundles/LayoutsAdminBundle/Resources/sass/_rules.scss
+++ b/bundles/LayoutsAdminBundle/Resources/sass/_rules.scss
@@ -125,9 +125,12 @@
         display: none;
     }
     &.show-body {
-        .nl-rule-body, .nl-rule-body-overlay {
+        .nl-rule-body-overlay {
             display: block;
             @extend %fadeIn;
+            .nl-rule-body {
+                display: block;
+            } 
         }
         .rule-details {
             &::after {
